package mir.protobuf.wire;

message Invocation {
  required uint32 id = 1;
  required int32  method_name = 2;
  required bytes  parameters = 3;
}

message Result {
  required uint32 id = 1;
  optional bytes response = 2;
}
